--- a/css/features.042215.1.scss
+++ b/css/features.042215.1.scss
@@ -35,6 +35,11 @@ section.features {
 		color: $featuresColourIcon;
 		background: $featuresColourIconBack;
 		border-radius: 50%;
+		@include transitionEffectAllEaseOut(0.4s);
+		&:hover {
+			background:$featuresColourIconBackHover;
+			color: $featuresColourIconHover;
+		}
 	}
 	& .imageShader {
 		position: absolute;
